# libfreenect-OpenCV

./: .gitignore  CMakeLists.txt  README.md
data/标定距离2/: depth.txt  kinect深度数值精度测试.xlsx
include/: libfreenect_cv.h  libfreenect_registration.h  my_libfreenect_cv.h
include/c_sync/: CMakeLists.txt  libfreenect_sync.h
src/: Accuracy_assessment.cpp  kinect_cv.cpp  libfreenect_cv.cpp  my_libfreenect_cv.cpp
